tests/common/snapshots/squashfs_v2__common__tests__squashfs_v2.rs-7-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 2587654
  name: squashfs
  confidence: 250
  description: "SquashFS file system, Big Endian endian, version: 2.0, compression: unknown, inode count: 431, block size: 65536, image size: 2587654 bytes, created: 2009-02-12 09:09:55"
  always_display: false
  extraction_declined: false
