tests/common/snapshots/squashfs_v2__common__tests__squashfs_v2.rs-7-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: ~
  success: true
  extractor: sasquatch
  do_not_recurse: false
  output_directory: "[output_directory]"
